--- a/admin/css/locations-maps-admin.scss
+++ b/admin/css/locations-maps-admin.scss
@@ -199,6 +199,15 @@ $red: #c0392b;
 
 }
 
+.locations-map-settings {
+	@media (min-width: 768px) {
+		max-width: 70%;
+	}
+	@media (min-width: 992px) {
+		max-width: 55%;
+	}
+}
+
 @media (min-width: 768px) {
 	.map-elements-inside .map-row .map-field.one-quarter { -webkit-box-flex: 0; -ms-flex: 0 0 25%; flex: 0 0 25%; max-width: 25%; }
 	.map-elements-inside .map-row .map-field.one-half { -webkit-box-flex: 0; -ms-flex: 0 0 50%; flex: 0 0 50%; max-width: 50%; }
