Working to eliminate inline HTML in class files and switch cases. Updated JS and CSS for the option elements.

--- a/admin/css/locations-maps-admin.css
+++ b/admin/css/locations-maps-admin.css
@@ -155,7 +155,10 @@
 
 .lm-media-container {
   position: relative;
-  float: left;
+  display: flex;
+}
+.lm-media-container .locations-map-hover {
+  order: 2;
 }
 .lm-media-container .lm-icon {
   display: inline-block;
